[gd_scene load_steps=34 format=2]

[ext_resource path="res://Escenas/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Multimedia/Personajes/Alex_run_16x16.png" type="Texture" id=2]
[ext_resource path="res://Multimedia/Botones/G.png" type="Texture" id=3]
[ext_resource path="res://Escenas/Player/MediumShadow.png" type="Texture" id=4]
[ext_resource path="res://Scripts/G-key.gd" type="Script" id=5]
[ext_resource path="res://Multimedia/Iconos/LightSprite.png" type="Texture" id=6]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
	vec4 new_color = previous_color;
	if (active == true) {
		new_color = white_color
	}
	COLOR = new_color;
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/active = false

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=26]
length = 0.001

[sub_resource type="Animation" id=7]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 16, 15, 14, 13, 12 ]
}

[sub_resource type="Animation" id=9]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=10]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=15]
blend_point_0/node = SubResource( 11 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 12 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 13 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 14 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "RunDown"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "RunUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=20]
blend_point_0/node = SubResource( 16 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 17 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 18 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 19 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachine" id=23]
states/Idle/node = SubResource( 15 )
states/Idle/position = Vector2( 324, 106 )
states/Run/node = SubResource( 20 )
states/Run/position = Vector2( 493, 106 )
transitions = [ "Idle", "Run", SubResource( 21 ), "Run", "Idle", SubResource( 22 ) ]
start_node = "Idle"
graph_offset = Vector2( 34.8483, 14.84 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=24]

[sub_resource type="CapsuleShape2D" id=27]
radius = 6.66667
height = 8.66666

[sub_resource type="CircleShape2D" id=28]
radius = 11.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 560, 325 )
scale = Vector2( 3, 3 )
z_as_relative = false
collision_layer = 2147483650
script = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 1.33334, 7.66667 )
scale = Vector2( 0.750001, 0.649999 )
texture = ExtResource( 4 )

[node name="Player" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 0.666672, -2.66666 )
texture = ExtResource( 2 )
hframes = 24
frame = 18

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "IdleDown"
anims/IdleDown = SubResource( 3 )
anims/IdleLeft = SubResource( 4 )
anims/IdleRight = SubResource( 5 )
anims/IdleUp = SubResource( 6 )
anims/RESET = SubResource( 26 )
anims/RunDown = SubResource( 7 )
anims/RunLeft = SubResource( 8 )
anims/RunRight = SubResource( 9 )
anims/RunUp = SubResource( 10 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 23 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 24 )
parameters/Idle/blend_position = Vector2( 0, 1 )
parameters/Run/blend_position = Vector2( 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.33333, -3 )
shape = SubResource( 27 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 5, -0.666672 )
current = true

[node name="player" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2( 1.33333, -2.66666 )
shape = SubResource( 28 )

[node name="G-key" type="Sprite" parent="."]
position = Vector2( 1, -22 )
scale = Vector2( 0.2, 0.2 )
z_index = 1
texture = ExtResource( 3 )
script = ExtResource( 5 )

[node name="Luces" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 6 )
shadow_enabled = true

[node name="Sombra" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 6 )
texture_scale = 10.0
mode = 3
range_item_cull_mask = 2
shadow_enabled = true

[connection signal="player_g" from="." to="." method="_on_Player_player_g"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="player" to="." method="_on_player_area_entered"]
[connection signal="area_exited" from="player" to="." method="_on_Area2D_area_exited"]
